# ovson

./: README.md
OVson/: CMakeLists.txt
OVson/OVson/: CMakeLists.txt  Java.h  Resource.rc  dllmain.cpp  resource.h
OVson/OVson/Chat/: ChatAPI_Bridge.cpp  ChatAPI_Bridge.h  ChatHook.cpp  ChatHook.h  ChatInterceptor.cpp  ChatInterceptor.h  ChatSDK.cpp  ChatSDK.h  Commands.cpp
OVson/OVson/ClickGUI/: ClickGUI.h  ClickGUI_Bridge.cpp  ClickGUI_Bridge.h  Helpers.cpp  Helpers.h  Input.cpp  Lifecycle.cpp  LiquidGlass.cpp  LiquidGlass.h  Render.cpp  State.cpp  State.h  Theme.h
OVson/OVson/ClickGUI/Shaders/: blur_frag.glsl  blur_vert.glsl  glass_frag.glsl  glass_vert.glsl  vector_blur_frag.glsl  vector_blur_vert.glsl
OVson/OVson/ClickGUI/Tabs/: Colors.cpp  Debug.cpp  Players.cpp  Plugins.cpp  Settings.cpp  Tabs.h  Tags.cpp  Utils.cpp  Visuals.cpp
OVson/OVson/Config/: Config.cpp  Config.h  StatColors.cpp  StatColors.h
OVson/OVson/JavaHook/: JavaHook.cpp  JavaHook.h
OVson/OVson/Logic/: AutoGG.cpp  HypixelGameState.cpp  McBindings.cpp  McLogTail.cpp  PlayerStatsFetch.cpp  ScoreboardTeams.cpp  StatsCache.cpp  StatsPoll.cpp  StatsTracker.cpp  StatsTracker.h  StatsTracker.internal.h  TabListScan.cpp
OVson/OVson/Logic/BedDefense/: BedDefenseManager.cpp
OVson/OVson/Net/: Http.cpp  Http.h
OVson/OVson/Plugins/: PluginLoader.cpp  PluginLoader.h
OVson/OVson/Render/: BetterTab.cpp  BetterTab.h  ClickGUI.cpp  DefenseRenderer.cpp  DefenseRenderer.h  FontRenderer.cpp  Framebuffer.cpp  Framebuffer.h  GL.cpp  GL.h  NameTagRenderer.cpp  NameTagRenderer.h  NotificationManager.cpp  NotificationManager.h  RenderHook.cpp  RenderHook.h  RenderUtils.cpp  RenderUtils.h  Shader.cpp  Shader.h  StatsOverlay.cpp  StatsOverlay.h  TechOverlay.cpp  TechOverlay.h  TextureLoader.cpp  TextureLoader.h
OVson/OVson/SDK/: McAccess.h  Minecraft.cpp  Minecraft.h  Player.cpp  Player.h
OVson/OVson/Services/: AbyssService.cpp  AbyssService.h  AuroraService.cpp  AuroraService.h  DiscordManager.cpp  Hypixel.cpp  Hypixel.h  KhadowService.cpp  KhadowService.h  PrismService.cpp  PrismService.h  SeraphService.cpp  SeraphService.h  UrchinService.cpp  UrchinService.h
OVson/OVson/Utils/: BedwarsPrestiges.h  ChatBypasser.cpp  ChatBypasser.h  CrashDump.cpp  CrashDump.h  GlGuard.h  JniGuard.h  Logger.cpp  NumberDenicker.cpp  NumberDenicker.h  ReplaySpammer.cpp  ReplaySpammer.h  SafeGuard.h  SensitivityFix.h  ThreadTracker.cpp  ThreadTracker.h  Timer.h  Watchdog.cpp  Watchdog.h
OVson/OVson/Utils/Anticheat/: AcChecks.cpp  AcCore.cpp  AcInternal.h  Anticheat.h
OVson/OVsonAPI/src/net/ovson/api/: OVsonAPI.java  OVsonPlugin.java  PluginInfo.java  PluginManager.java
OVson/OVsonAPI/src/net/ovson/api/chat/: ChatAPI.java
OVson/OVsonAPI/src/net/ovson/api/clickgui/: ClickGUI.java  CustomChoice.java  CustomInput.java  CustomModule.java  CustomSetting.java  CustomSlider.java  CustomToggle.java  ModuleCallback.java  SettingCallback.java
OVson/OVsonAPI/src/net/ovson/api/event/: Cancellable.java  ChatReceivedEvent.java  ChatSendEvent.java  Event.java  EventBus.java  EventHandler.java  PlayerJoinEvent.java  Render2DEvent.java  TickEvent.java
OVson/OVsonAPI/src/net/ovson/api/event/network/: PacketEvent.java  PacketReceiveEvent.java  PacketSendEvent.java
OVson/OVsonAPI/src/net/ovson/api/event/player/: AttackEvent.java  UpdateEvent.java
OVson/OVsonAPI/src/net/ovson/api/hook/: ClassTransformer.java  TransformerRegistry.java
OVson/OVsonAPI/src/net/ovson/api/player/: PlayerAPI.java  PlayerStats.java
OVson/OVsonAPI/src/net/ovson/api/render/: RenderAPI.java
OVson/OVsonAPI/test_plugin/src/net/ovson/test/: TestPlugin.java
OVson/OVsonLoader/: CMakeLists.txt  OVsonLoader.rc
OVson/OVsonLoader/slint_ui/: crash_dumps.cpp  crash_dumps.h  injector.cpp  injector.h  log_tail.cpp  log_tail.h  main.cpp  ovson_ui.slint  process_scan.cpp  process_scan.h  settings.cpp  settings.h  tray_icon.cpp  tray_icon.h  updater.cpp  updater.h
